add debug message
Signed-off-by: ac892247 <a.chmelo@gmail.com>